# shift_task

./: .example.env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .test.env  Dockerfile  config.py  docker-compose.example.yml  main.py  pg_hba.conf  populate_data.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 06a6bdc5f980_create_user_table.py  0b1fb409e4f1_create_user_table.py  0d32e2a6ac19_upgrade_salary.py  1a22b46ea5e9_create_user_table.py  1ac37144ac4f_update_position.py  35f93c343a50_apgrade_user.py  505d4a1a3dc6_create_salary_model.py  6aa05d01bd63_upgrate_numeric_field.py  7af61d7a351a_upgrate_user_position.py  8dcf7b38e0ca_upgrade_salary.py  9bc385d3fbd6_initial_schema.py  b047eb614c1d_apgrade_user.py  b0f492c57d54_create_table_position_and_user_position.py  cf181fca8a59_update_гыук_position.py  d2c579c48042_upgrate_user_table.py  df933cad3bd0_create_table_position_and_user_position.py  f40d16bf013a_salary.py  f9d1ea01478b_salary_increase.py
db/: database.py  dependency.py  schemas.py  session.py
src/: logger.py  schemas_base.py
src/constants/: custom_type.py
src/errors/: error_code.py  http_servise_exception.py  http_value_exception.py  type_error_.py
src/position/: actions.py  dals.py  models.py  position_handlers.py  shemas.py
src/salary/: actions.py  dals.py  models.py  salary_handlers.py  schemas.py
src/security/: auth.py  hasher.py  redis_client.py
src/user/: actions.py  dals.py  models.py  schemas.py  user_handlers.py  validate.py
tests/: conftest.py  dump.sql  dump_for_tests.sql  test_database_connect.py
tests/dataset/: position_data.py  salary_data.py  user_data.py
tests/db_setter/: position_creater.py  salary_creater.py  user_creater.py
tests/position/: test_get_current_position.py
tests/salary/: test_get_future_discussion_salary.py
tests/user/: conftest.py  test_get_user_handler.py  test_login_handler.py  (+4 more)
